新增自定义日历控件

--- a/实现细节记录.md
+++ b/实现细节记录.md
@@ -18,3 +18,11 @@ HTML5 新增了一种操作类名的方式，那就是为所有元素添加 `cla
     
     var element = document.getElementById("test");
     element.classList.add("move");
+    
+    
+## 13. 自定义日历控件
+    
+`new Date().getMonth()` 返回的值在 `[0, 11]` 之间， 0 代表一月。
+
+`new Date().getDay()` 返回的值在 `[0, 6]` 之间，0 代表星期天。
+
